Loc dump April 16th, 2014

--- a/project/res/values-da/strings.xml
+++ b/project/res/values-da/strings.xml
@@ -30,6 +30,16 @@
     <string name="end_date_TEMPLATE">Slutdato: %s</string>
     <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
     <string name="fly_from_TEMPLATE">Flyv fra %1$s</string>
+    <!-- Choose flight dates -->
+    <string name="choose_flight_dates">Vælg datoer for flyrejse</string>
+    <!-- Hotels Tonight -->
+    <string name="hotels_tonight">Hoteller i aften</string>
+    <!-- Missing flight info header string "Missing search information!" -->
+    <string name="missing_flight_info_header">Manglende oplysninger for din søgning!</string>
+    <!-- Missing flight info message "Please select a flight origin, and a valid date or date range."-->
+    <string name="missing_flight_info_message">Vælg afrejsested og gyldig dato eller datointerval.</string>
+    <!-- Clear dates -->
+    <string name="clear_dates">Ryd datoer</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -115,7 +125,11 @@
     <!-- Loading Hotels and Flights… -->
     <string name="loading_hotels_and_flights">Henter hoteller og flyrejser…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
-    <string name="when_to_fly">Afrejsedatoer</string>
+    <string name="when_to_fly">Udrejse</string>
+    <!-- Flight fare calendar header for return flights -->
+    <string name="when_to_return">Hjemrejse</string>
+    <!-- Search one way flight -->
+    <string name="search_one_way_flight">Søg efter enkeltbilletter</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
     <string name="waypoint_suggestion_fail">Der blev ikke fundet nogen oplysninger om destinationen! Rediger din søgning, og prøv igen.</string>
 
@@ -193,6 +207,8 @@
     <string name="No_Reviews">Ingen anmeldelser</string>
     <!-- Text indicating a hotel room/rate is non-refundable -->
     <string name="Non_Refundable">Ikke-refunderbar</string>
+    <!-- Title for the reviews section after we get the property name -->
+    <string name="reviews_for_TEMPLATE">Anmeldelse for %1$s</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1216,8 +1232,12 @@
     <string name="add_adult_number_TEMPLATE">Oplysninger for voksen %1$s</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">Oplysninger for barn %1$s</string>
+    <!-- Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_TEMPLATE">Oplysninger for barn på %1$s</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">Oplysninger for spædbarn på skødet %1$s</string>
+    <!-- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_TEMPLATE">Oplysninger for spædbarn med eget sæde %1$s</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Boarding kan nægtes, hvis den rejsendes navn ikke stemmer overens med det officielle billed-id.</string>
 
@@ -1807,6 +1827,8 @@
     <string name="vip_access_message">På VIP Access-hoteller kan Expedia Elite Plus-medlemmer få gratis værelsesopgraderinger og andre fordele, der er tilgængelige ved indtjekning.</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">Kun VIP Access-hoteller</string>
+    <!-- Filter for showing only VIP access hotels -->
+    <string name="VIP_Access_Only">Kun VIP Access</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">TIL</string>
     <string name="switch_off">FRA</string>
