--- a/project/res/values-de/strings.xml
+++ b/project/res/values-de/strings.xml
@@ -30,6 +30,16 @@
     <string name="end_date_TEMPLATE">Enddatum: %s</string>
     <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
     <string name="fly_from_TEMPLATE">Flug ab %1$s</string>
+    <!-- Choose flight dates -->
+    <string name="choose_flight_dates">Flugdaten auswählen</string>
+    <!-- Hotels Tonight -->
+    <string name="hotels_tonight">Hotels für heute Nacht</string>
+    <!-- Missing flight info header string "Missing search information!" -->
+    <string name="missing_flight_info_header">Es fehlen noch Angaben für die Suche.</string>
+    <!-- Missing flight info message "Please select a flight origin, and a valid date or date range."-->
+    <string name="missing_flight_info_message">Bitte wählen Sie einen Abflughafen und ein Datum oder einen Zeitraum aus.</string>
+    <!-- Clear dates -->
+    <string name="clear_dates">Daten zurücksetzen</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -115,7 +125,11 @@
     <!-- Loading Hotels and Flights… -->
     <string name="loading_hotels_and_flights">Hotels und Flüge werden geladen…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
-    <string name="when_to_fly">Datum des Hinfluges</string>
+    <string name="when_to_fly">Datum des Hinflugs</string>
+    <!-- Flight fare calendar header for return flights -->
+    <string name="when_to_return">Datum des Rückflugs</string>
+    <!-- Search one way flight -->
+    <string name="search_one_way_flight">Nur Hinflug</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
     <string name="waypoint_suggestion_fail">Keine Standortinformationen gefunden! Bitte ändern Sie Ihren Suchauftrag und versuchen Sie es noch mal.</string>
 
@@ -193,6 +207,8 @@
     <string name="No_Reviews">Ohne Bewertungen</string>
     <!-- Text indicating a hotel room/rate is non-refundable -->
     <string name="Non_Refundable">Nicht erstattungsfähig</string>
+    <!-- Title for the reviews section after we get the property name -->
+    <string name="reviews_for_TEMPLATE">Bewertungen für %1$s</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1017,7 +1033,7 @@
     <!-- Label for a flight that lists the type of fare and the price, eg. "Saver Lite : $295" -->
     <string name="fare_name_and_price_TEMPLATE">%1$s : %2$s</string>
     <!-- Button label for information about baggage fees -->
-    <string name="baggage_fee_info">INFORMATIONEN ZU GEPÄCKPREISEN</string>
+    <string name="baggage_fee_info">Informationen zur Gepäckgebühr</string>
     <!-- Layover label.  %1$s is the duration of the layover.  %2$s is the location of the layover.  E.g., "60m layover in Fort Lauderdale, FL" -->
     <string name="layover_duration_location_TEMPLATE">&lt;b&gt;%1$s Zwischenstopp&lt;/b&gt; in %2$s</string>
     <!-- Extra details about a flight segment.  %1$s is the duration, %2$s is the cabin code, %3$s is the class and %4$s is the plane.  For example: "4h 10m - Economy (K), Boeing 747." -->
@@ -1216,8 +1232,12 @@
     <string name="add_adult_number_TEMPLATE">Angaben zum %1$s. Erwachsenen</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">Angaben zum %1$s. Kind</string>
+    <!-- Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_TEMPLATE">Angaben zum %1$s Jahre alten Kind</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">Angaben zum %1$s. Kleinkind auf dem Schoß</string>
+    <!-- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_TEMPLATE">Angaben zum %1$s. Kleinkind auf einem Sitzplatz</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Wenn der Name des Reisenden nicht mit dem Namen im Lichtbildausweis übereinstimmt, kann das Boarding verwehrt werden.</string>
 
@@ -1808,6 +1828,8 @@
     <string name="vip_access_message">Expedia-Elite-Plus-Mitglieder erhalten in VIP-Access-Hotels je nach Verfügbarkeit bei Check-in kostenlose Zimmerupgrades und weitere Extras.</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">Nur VIP-Access-Hotels</string>
+    <!-- Filter for showing only VIP access hotels -->
+    <string name="VIP_Access_Only">Nur VIP Access</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">AN</string>
     <string name="switch_off">AUS</string>
