--- a/project/res/values-fr/strings.xml
+++ b/project/res/values-fr/strings.xml
@@ -30,6 +30,16 @@
     <string name="end_date_TEMPLATE">Date de fin : %s</string>
     <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
     <string name="fly_from_TEMPLATE">Partez de %1$s</string>
+    <!-- Choose flight dates -->
+    <string name="choose_flight_dates">Choisissez les dates de votre voyage</string>
+    <!-- Hotels Tonight -->
+    <string name="hotels_tonight">Hôtel ce soir</string>
+    <!-- Missing flight info header string "Missing search information!" -->
+    <string name="missing_flight_info_header">Informations de recherche manquantes !</string>
+    <!-- Missing flight info message "Please select a flight origin, and a valid date or date range."-->
+    <string name="missing_flight_info_message">Veuillez sélectionner la provenance d\&apos;un vol et une date ou une fourchette de dates valide.</string>
+    <!-- Clear dates -->
+    <string name="clear_dates">Effacez les dates</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -116,6 +126,10 @@
     <string name="loading_hotels_and_flights">Chargement des hôtels et vols…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">Date du vol</string>
+    <!-- Flight fare calendar header for return flights -->
+    <string name="when_to_return">Date du vol retour</string>
+    <!-- Search one way flight -->
+    <string name="search_one_way_flight">Rechercher un vol aller simple</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
     <string name="waypoint_suggestion_fail">Aucune information trouvable sur cette destination ! Veuillez modifier votre recherche et essayer à nouveau.</string>
 
@@ -193,6 +207,8 @@
     <string name="No_Reviews">Aucun avis</string>
     <!-- Text indicating a hotel room/rate is non-refundable -->
     <string name="Non_Refundable">Non remboursable</string>
+    <!-- Title for the reviews section after we get the property name -->
+    <string name="reviews_for_TEMPLATE">Avis pour %1$s</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1017,7 +1033,7 @@
     <!-- Label for a flight that lists the type of fare and the price, eg. "Saver Lite : $295" -->
     <string name="fare_name_and_price_TEMPLATE">%1$s : %2$s</string>
     <!-- Button label for information about baggage fees -->
-    <string name="baggage_fee_info">FRAIS DE BAGAGES</string>
+    <string name="baggage_fee_info">Informations frais de bagages</string>
     <!-- Layover label.  %1$s is the duration of the layover.  %2$s is the location of the layover.  E.g., "60m layover in Fort Lauderdale, FL" -->
     <string name="layover_duration_location_TEMPLATE">Escale de &lt;b&gt;%1$s&lt;/b&gt; à %2$s</string>
     <!-- Extra details about a flight segment.  %1$s is the duration, %2$s is the cabin code, %3$s is the class and %4$s is the plane.  For example: "4h 10m - Economy (K), Boeing 747." -->
@@ -1216,8 +1232,12 @@
     <string name="add_adult_number_TEMPLATE">Informations Adulte %1$s</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">Informations Enfant %1$s</string>
+    <!-- Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_TEMPLATE">Informations Enfant de %1$s ans</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">Informations Enfant - 2 ans sur les genoux %1$s</string>
+    <!-- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_TEMPLATE">Informations Enfant sur le siège %1$s</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Si le nom du voyageur ne correspond pas à celui sur la pièce d\&apos;identité, l\&apos;embarquement pourrait être refusé.</string>
 
@@ -1437,7 +1457,7 @@
 
     <!-- Add to calendar (flights) -->
     <!-- Title for calendar event.  %1$s is the starting airport, %2$s is the ending airport, e.g. "SFO to BOS" -->
-    <string name="calendar_flight_title_TEMPLATE">De %1$s à %2$s</string>
+    <string name="calendar_flight_title_TEMPLATE">%1$s à %2$s</string>
     <!-- Location for calendar event.  %1$s is the name of the starting airport, %2$s is the city it is in, e.g. "San Francisco Int'l Airport, San Francisco" -->
     <string name="calendar_flight_location_TEMPLATE">%1$s, %2$s</string>
     <!-- Part of the description, showing the itinerary #.  %s is the itinerary number, e.g. "Expedia Itinerary #: 3532532" -->
@@ -1638,7 +1658,7 @@
     <!-- Label for "start search" button -->
     <string name="search">Rechercher</string>
     <!-- Date range for current search: %1$s is the "From Date" and %2$s is the "To Date" (i.e. "Oct 14 to Oct 16") -->
-    <string name="date_range_TEMPLATE">Du %1$s au %2$s</string>
+    <string name="date_range_TEMPLATE">%1$s à %2$s</string>
     <!-- Hint for filtering results by hotel name -->
     <string name="filter_hotel_name_hint">Filtrer par nom d\&apos;hôtel</string>
     <!-- Label indicating that there are no results matching their current filter -->
@@ -1807,6 +1827,8 @@
     <string name="vip_access_message">Les hôtels Accès VIP offrent le surclassement sans frais en catégorie supérieure aux membres Élite Plus, ainsi que de nombreux autres avantages, selon disponibilité à l\&apos;arrivée.</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">Seulement les hôtels Accès VIP</string>
+    <!-- Filter for showing only VIP access hotels -->
+    <string name="VIP_Access_Only">VIP Access uniquement</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">MARCHE</string>
     <string name="switch_off">ARRÊT</string>
