--- a/project/res/values-ko/strings.xml
+++ b/project/res/values-ko/strings.xml
@@ -30,6 +30,16 @@
     <string name="end_date_TEMPLATE">완료일: %s</string>
     <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
     <string name="fly_from_TEMPLATE">%1$s발 항공편</string>
+    <!-- Choose flight dates -->
+    <string name="choose_flight_dates">항공편 날짜 선택</string>
+    <!-- Hotels Tonight -->
+    <string name="hotels_tonight">오늘 밤 가능한 호텔</string>
+    <!-- Missing flight info header string "Missing search information!" -->
+    <string name="missing_flight_info_header">검색 정보가 없습니다!</string>
+    <!-- Missing flight info message "Please select a flight origin, and a valid date or date range."-->
+    <string name="missing_flight_info_message">항공편 출발지 및 유효한 날짜 또는 날짜 범위를 선택해 주세요.</string>
+    <!-- Clear dates -->
+    <string name="clear_dates">날짜 지우기</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -116,6 +126,10 @@
     <string name="loading_hotels_and_flights">호텔 및 항공편 로드 중…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">떠나는 날짜</string>
+    <!-- Flight fare calendar header for return flights -->
+    <string name="when_to_return">돌아오는 날짜</string>
+    <!-- Search one way flight -->
+    <string name="search_one_way_flight">편도 항공편 검색</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
     <string name="waypoint_suggestion_fail">위치 정보를 찾을 수 없습니다! 검색 조건을 변경하고 다시 시도해 주세요.</string>
 
@@ -193,6 +207,8 @@
     <string name="No_Reviews">이용 후기 없음</string>
     <!-- Text indicating a hotel room/rate is non-refundable -->
     <string name="Non_Refundable">환불 불가</string>
+    <!-- Title for the reviews section after we get the property name -->
+    <string name="reviews_for_TEMPLATE">%1$s에 대한 이용 후기</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1216,8 +1232,12 @@
     <string name="add_adult_number_TEMPLATE">어른 %1$s 정보</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">아동 %1$s 정보</string>
+    <!-- Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_TEMPLATE">만 %1$s세 아동 정보</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">무릎에 앉히는 영유아 %1$s 정보</string>
+    <!-- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_TEMPLATE">좌석에 앉는 영유아 %1$s 정보</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">여행객 이름이 정부가 발급한 사진이 부착된 ID와 맞지 않는 경우 탑승이 거부될 수 있습니다.</string>
 
@@ -1807,6 +1827,8 @@
     <string name="vip_access_message">VIP Access 호텔에서 Expedia Elite Plus 회원은 체크인 시 이용 가능한 경우 무료 객실 업그레이드와 기타 특전을 받으시게 됩니다.</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">VIP Access 호텔만</string>
+    <!-- Filter for showing only VIP access hotels -->
+    <string name="VIP_Access_Only">VIP Access 전용</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">켜기</string>
     <string name="switch_off">끄기</string>
