--- a/project/res/values-it/strings.xml
+++ b/project/res/values-it/strings.xml
@@ -30,6 +30,16 @@
     <string name="end_date_TEMPLATE">Data di ritorno: %s</string>
     <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
     <string name="fly_from_TEMPLATE">Vola da %1$s</string>
+    <!-- Choose flight dates -->
+    <string name="choose_flight_dates">Scegli le date del volo</string>
+    <!-- Hotels Tonight -->
+    <string name="hotels_tonight">Hotel per questa notte</string>
+    <!-- Missing flight info header string "Missing search information!" -->
+    <string name="missing_flight_info_header">Informazioni di ricerca mancanti!</string>
+    <!-- Missing flight info message "Please select a flight origin, and a valid date or date range."-->
+    <string name="missing_flight_info_message">Inserisci una località di partenza del volo e una data o una combinazione di date valide.</string>
+    <!-- Clear dates -->
+    <string name="clear_dates">Cancella date</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -116,6 +126,10 @@
     <string name="loading_hotels_and_flights">Caricamento di hotel e voli in corso…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">Andata</string>
+    <!-- Flight fare calendar header for return flights -->
+    <string name="when_to_return">Ritorno</string>
+    <!-- Search one way flight -->
+    <string name="search_one_way_flight">Seleziona un volo di sola andata</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
     <string name="waypoint_suggestion_fail">Nessuna informazione sulla geolocalizzazione disponibile. Modifica la ricerca e riprova.</string>
 
@@ -193,6 +207,8 @@
     <string name="No_Reviews">Nessuna recensione</string>
     <!-- Text indicating a hotel room/rate is non-refundable -->
     <string name="Non_Refundable">Non rimborsabile</string>
+    <!-- Title for the reviews section after we get the property name -->
+    <string name="reviews_for_TEMPLATE">Recensioni per %1$s</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1216,8 +1232,12 @@
     <string name="add_adult_number_TEMPLATE">Dettagli adulto %1$s</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">Dettagli bambino %1$s</string>
+    <!-- Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_TEMPLATE">Dettagli bambino di %1$s anni</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">Dettagli neonato %1$s</string>
+    <!-- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_TEMPLATE">Dettagli neonato %1$s con posto a sedere</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">L\&apos;imbarco potrebbe essere negato se il nome del passeggero non coincide con quello del documento d\&apos;identità.</string>
 
@@ -1807,6 +1827,8 @@
     <string name="vip_access_message">Presso gli hotel VIP Access, gli iscritti a Expedia Elite Plus ricevono l\&apos;upgrade gratuito della camera e tanti altri extra, previa disponibilità al momento del check-in.</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">Solo hotel VIP Access</string>
+    <!-- Filter for showing only VIP access hotels -->
+    <string name="VIP_Access_Only">Solo Accesso VIP</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">ON</string>
     <string name="switch_off">OFF</string>
