--- a/project/res/values-sv/strings.xml
+++ b/project/res/values-sv/strings.xml
@@ -30,6 +30,16 @@
     <string name="end_date_TEMPLATE">Slutdatum: %s</string>
     <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
     <string name="fly_from_TEMPLATE">Flyg från %1$s</string>
+    <!-- Choose flight dates -->
+    <string name="choose_flight_dates">Välj flygdatum</string>
+    <!-- Hotels Tonight -->
+    <string name="hotels_tonight">Hotell ikväll</string>
+    <!-- Missing flight info header string "Missing search information!" -->
+    <string name="missing_flight_info_header">Sökinformation saknas!</string>
+    <!-- Missing flight info message "Please select a flight origin, and a valid date or date range."-->
+    <string name="missing_flight_info_message">Välj avreseort för flygresan och ett giltigt datum eller datumintervall.</string>
+    <!-- Clear dates -->
+    <string name="clear_dates">Rensa datum</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -115,7 +125,11 @@
     <!-- Loading Hotels and Flights… -->
     <string name="loading_hotels_and_flights">Hämtar flyg och hotell…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
-    <string name="when_to_fly">Utresa</string>
+    <string name="when_to_fly">Avresa</string>
+    <!-- Flight fare calendar header for return flights -->
+    <string name="when_to_return">Hemresa</string>
+    <!-- Search one way flight -->
+    <string name="search_one_way_flight">Sök efter enkelresor</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
     <string name="waypoint_suggestion_fail">Ingen platsinformation hittades! Ändra din sökning och försök igen.</string>
 
@@ -193,6 +207,8 @@
     <string name="No_Reviews">Inga recensioner</string>
     <!-- Text indicating a hotel room/rate is non-refundable -->
     <string name="Non_Refundable">Ingen återbetalning</string>
+    <!-- Title for the reviews section after we get the property name -->
+    <string name="reviews_for_TEMPLATE">Recensioner för %1$s</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1017,7 +1033,7 @@
     <!-- Label for a flight that lists the type of fare and the price, eg. "Saver Lite : $295" -->
     <string name="fare_name_and_price_TEMPLATE">%1$s : %2$s</string>
     <!-- Button label for information about baggage fees -->
-    <string name="baggage_fee_info">INFORMATION OM BAGAGEAVGIFTER</string>
+    <string name="baggage_fee_info">Information om bagageavgifter</string>
     <!-- Layover label.  %1$s is the duration of the layover.  %2$s is the location of the layover.  E.g., "60m layover in Fort Lauderdale, FL" -->
     <string name="layover_duration_location_TEMPLATE">&lt;b&gt;%1$s&lt;/b&gt; mellanlandar i %2$s</string>
     <!-- Extra details about a flight segment.  %1$s is the duration, %2$s is the cabin code, %3$s is the class and %4$s is the plane.  For example: "4h 10m - Economy (K), Boeing 747." -->
@@ -1216,8 +1232,12 @@
     <string name="add_adult_number_TEMPLATE">Info om vuxen resenär %1$s</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">Info om barnresenär %1$s</string>
+    <!-- Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_TEMPLATE">Info om %1$s-åring</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">Info om spädbarn %1$s i vuxens knä</string>
+    <!-- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_TEMPLATE">Info om barnresenär %1$s i säte</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">Passagerare kan nekas ombordstigning om namnet i bokningen inte matchar namnet i den statligt utfärdade ID-handlingen</string>
 
@@ -1807,6 +1827,8 @@
     <string name="vip_access_message">På hotell med VIP Access får Expedia Elite Plus-medlemmar gratis rumsuppgraderingar och andra förmåner som är tillgängliga vid incheckning.</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">Endast hotell med VIP Access</string>
+    <!-- Filter for showing only VIP access hotels -->
+    <string name="VIP_Access_Only">Endast VIP-tillgång</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">AV</string>
     <string name="switch_off">PÅ</string>
