--- a/project/res/values-zh-rHK/strings.xml
+++ b/project/res/values-zh-rHK/strings.xml
@@ -30,6 +30,16 @@
     <string name="end_date_TEMPLATE">結束日期：%s</string>
     <!-- Fly From Template where %s is the origin e.g. "Fly from Boston,MA" -->
     <string name="fly_from_TEMPLATE">由%1$s起飛</string>
+    <!-- Choose flight dates -->
+    <string name="choose_flight_dates">選擇機票日期</string>
+    <!-- Hotels Tonight -->
+    <string name="hotels_tonight">今晚的酒店</string>
+    <!-- Missing flight info header string "Missing search information!" -->
+    <string name="missing_flight_info_header">欠缺所須搜尋資料！</string>
+    <!-- Missing flight info message "Please select a flight origin, and a valid date or date range."-->
+    <string name="missing_flight_info_message">請選擇航班出發地，以及有效的日期或期間。</string>
+    <!-- Clear dates -->
+    <string name="clear_dates">清除日期</string>
 
     <!-- Calendar picker strings -->
     <!-- Accessibility string describing calendar header. This is for the previous month label, which the user can click to go back one month. %s is the month, e.g. "September previous month" -->
@@ -116,6 +126,10 @@
     <string name="loading_hotels_and_flights">正載入酒店和機票…</string>
     <!-- Flight fare calendar header for a list of dates to fly -->
     <string name="when_to_fly">出發日期</string>
+    <!-- Flight fare calendar header for return flights -->
+    <string name="when_to_return">回程日期</string>
+    <!-- Search one way flight -->
+    <string name="search_one_way_flight">搜尋單程機票</string>
     <!-- Waypoint fail message for when no suggestion is available. -->
     <string name="waypoint_suggestion_fail">找不到位置資訊！請更改查詢，然後再試一次。</string>
 
@@ -193,6 +207,8 @@
     <string name="No_Reviews">沒有評價</string>
     <!-- Text indicating a hotel room/rate is non-refundable -->
     <string name="Non_Refundable">不設退款</string>
+    <!-- Title for the reviews section after we get the property name -->
+    <string name="reviews_for_TEMPLATE">%1$s的評論</string>
 
     <!-- Tablet flight details -->
     <!-- Name of button for selecting a flight (or hotel). %1$s is a price. example: "Add for $345" -->
@@ -1216,8 +1232,12 @@
     <string name="add_adult_number_TEMPLATE">成人 %1$s 資料</string>
     <!-- Add child traveler number template -->
     <string name="add_child_number_TEMPLATE">小童 %1$s 資料</string>
+    <!-- Add child traveler number template. We need to show the age of each child passenger -->
+    <string name="add_child_with_age_TEMPLATE">%1$s 歲小童資料</string>
     <!-- Add infant in lap traveler number template -->
     <string name="add_infant_in_lap_number_TEMPLATE">手抱嬰兒 %1$s 資料</string>
+    <!-- Add infant in seat traveler number template -->
+    <string name="add_infant_in_seat_number_TEMPLATE">佔用座位嬰兒 %1$s 資料</string>
     <!-- Warning shown to users when they enter their name -->
     <string name="name_must_match_warning">如旅客姓名與政府簽發附有照片的身分證明不符，可能被拒絕登機。</string>
 
@@ -1807,6 +1827,8 @@
     <string name="vip_access_message">於 VIP Access 酒店，Expedia Elite Plus 會員可視乎入住時的供應情況而享有免費客房升級和其他優惠。</string>
     <!-- Filter for showing only VIP access hotels -->
     <string name="filter_vip_access">只查看 VIP Access 酒店</string>
+    <!-- Filter for showing only VIP access hotels -->
+    <string name="VIP_Access_Only">只查看 VIP Access</string>
     <!-- ON and OFF text for toggle switches -->
     <string name="switch_on">於</string>
     <string name="switch_off">折扣</string>
